Fixed alignment on project container

--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -7,7 +7,8 @@ h5 {
 }
 
 .project-container {
-    padding-left: 160px;
-    width: 100%;
+    margin-left: 160px;
+    margin-right: 160px;
+    width: auto;
     min-height: 240px;
 } 
